[tool.poetry]
name = "family-finance"
version = "0.1.0"
description = "Finance Tracking for the Family"
authors = ["Ryan Denoux <ryanpdenoux@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
